--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head> </head>
   <body>
-    <video controls src="http://localhost:8000/video" width="240"></video>
+    <video controls src="video" width="240"></video>
     <script src="resource-timing.js"></script>
   </body>
 </html>
